# SimpleModuleSystem

./: .gitignore  CMakeLists.txt  mrm_connect_v_0_1.plantuml  mrm_url_v_0_1.plantuml
doc/: mrm_url_v_0_1.plantuml
docker/: docker-compose.yml
include/mrm/: server.hpp
src/: main.cpp
